# shapes-destroyer-c

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  README.md  build.sh  devenv.nix  neovim.json
src/: base.c  base.cpp  base.h  base_types.h  components.h  constants.h  entities.h  entity.c  entity.h  game_context.c  game_context.h  game_engine.c  game_engine.h  main.c  math.c  math.h  memory.c  memory.cpp  memory.h  mymath.cpp  mymath.h  sdl_main.cpp  systems.c  systems.h  types.h
src/ecs/: entity.c  entity.h  init.c  systems.c  systems.cpp  systems.h
src/game_engine/: game_engine.c  game_engine.cpp  game_engine.h  init.c  init.cpp  types.h
src/my_handmade_hero/: CMakeLists.txt  my_handmade_hero.cpp  my_handmade_hero.h
src/shapes_destroyer/: CMakeLists.txt  base.cpp  main.cpp  memory.h  types.h
src/shapes_destroyer/ecs/: components.h  entity.cpp  entity.h  init.cpp  systems.cpp  systems.h
src/shapes_destroyer/game_engine/: game_engine.cpp  game_engine.h  types.h
tests/: CMakeLists.txt  tests.c
